src/test/deca/codegen/valid/homemade/test/test_complet_printlnx.deca
{
    float x = 3.1;
    printlnx("x = ", (x));
}