src/test/deca/codegen/invalid/homemade/test/test_complet_float_depassement_mult.deca
{
    float x  = 1.402833460e38;
    x = x *3;
    println("x = ", (x));
}